--- a/src/index.css
+++ b/src/index.css
@@ -72,11 +72,7 @@
   }
 
   .gradient-bg {
-    background: radial-gradient(
-      71.52% 71.52% at 50% 100%,
-      #44331c 0%,
-      #101010 100%
-    );
+    background: linear-gradient(rgb(235, 245, 255) 0%, rgb(194, 226, 255) 100%);
   }
 
   .user-action-dropdown ul {
